Improved ConfigListener, many warning removed. Simplification of code. Better handling of errors for type conversion.